--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 setting.py
 
+vamos a tratar de hacer cambios
+
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
