--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 setting.py
 
 vamos a tratar de hacer cambios
+no mismo hay como
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
